--- a/index.html
+++ b/index.html
@@ -34,49 +34,12 @@ div {text-align: center;}
 </style>
 <body>
 <h1>Krishna Hari Bhattarai</h1>
-<h3>Independent Consultant, Nepal</h3>
+<h3>Independent Consultant</h3>
 <div>
-  <p>My name is Krishna. I am an experienced independent consultant with a commitment to combatting poverty and illiteracy in rural communities of Nepal. I have a Master's Degree in Business from Tribhuvan University and have undertaken successful projects in Tanahun, Sinchupalchowk, Kathmandu, and Gorkha districts. I am passionate about creating meaningful and sustainable change in the lives of those in need.<p>
+  <p>Krish has dedicated himself in social service for last nine years, combating poverty and illiteracy in rural communities of Nepal. He earned his Master's degre in Business and Finance from Tribhuvan University and has been actively involved in service since 2015.<p>
     <div>
-        <p>Through my work, I have developed several <strong>School Projects</strong>, such as <em>constructing schools</em>, providing <em>teacher's training</em>, offering <em>annual scholarships</em> to economically vulnerable children, and connecting our rural public schools with <em>sister schools</em> in Spain.<p>
-        <div>
-<div style="     width="100"; display:flex;justify-content:space-around;">
-<img src="Kyamin 1.jpeg" alt="Kyamin construction, 2017"
-         width="230" 
-     height="125" />
-<img src="Tribhuwan 1.jpeg" alt="Tribhuwan construction, 2019"
-         width="230" 
-     height="125" />
-    <img src="Kamadhenu 1.jpeg" alt="Kamadhenu service, 2022"
-         width="220" 
-     height="125" />
-<img src="Training 1.jpeg" alt="Kyamin training, 2021"
-         width="220" 
-     height="125" />
-    <p>Secondly, we create <em>Community Based Organizations(CBOs)</em> in order to carry out our <strong>Community Development Programs</strong>. This program is aimed at improving the livelihoods of farmers. This includes <em>cultivation of fruit</em> saplings,  <em>improvement of kitchen garden</em> by cultivating seasonal and off-seaasonal vegetables, <em>constructing greenhouses</em> fitted with gravity based <em>drip irrigation</em>, providing <em>career-driven vocational training</em>, providing <em>advanced agricultural tools</em>, and offering <em>agricultural training</em> on organic cultivation practices and Integrated Pest Management(IPM).
-     <div style="     width="100"; display:flex;justify-content:space-around;">
-<img src="Agro 2.jpeg" alt="Kyamin construction, 2017"
-         width="230" 
-     height="125" />
-<img src="Agro 1.jpeg" alt="Tribhuwan construction, 2019"
-         width="230" 
-     height="125" />
-        <img src="Agro 4.jpeg"alt="Sindhupalchowk, 2022"
-         width="250" 
-     height="125" />
-<img src="Agro 3.jpeg" alt="Manechauka, 2022"
-         width="150" 
-     height="125" />
+        <p>In 2015, Krish met with <strong>Magda Nos</strong>, a pioneering mountaineer and a passionate social worker from  Spain whose dedication and guidance profoundly influenced his approach to serving under privileged communities. His way of looking at people and societies has changed ever since. He has been carrying out different social projects in Nepal in collaboration with many international non-profits. His role consists of identification of community needs, planning and development of projects, implementing and following up of numerous educational and community development programs in Tanahun, Sindhupalchowk, Kathmandu, Gorkha and Udayapur districts. His passion lies in pursuit of creating a long lasting, sustainable change in the lives of those in need.<p>
 
-        <div>
-    <p>My work also extends to <strong>providing relief</strong> to those affected by the 2015 Nepal earthquake who had fled from Sindhupalchowk and taken in a camp. Eighteen temporary shelters were constructed for over 250 villagers in Boudha, Kathmandu. This also consisted of providing basic facilities and helping the children of the camp join Samata School by providing educational materials, uniforms, stationery items, and other necessary supplies.<p>
-            <div>
-    <p>During the COVID-19 pandemic, we established <strong>"Khana Sabailai Social Project"</strong>– a sustainable social enterprise in Kathmandu – to provide <em>free balanced meals</em> to daily pay laborers in Kathmandu, in collaboration with a non-profit. We fed daily around four hundred porters, construction workers, elderly, physically challenged, single women, street vendors, and other daily pay workers throughout the entire lock-down period. The project continues to offer a quality meal to the target group at the lowest possible price.<p>
-<div>
-        <div>
-<p>In my spare time, I enjoy travelling, reading, and listening to music. I have found true joy in helping those in need. If you'd like to learn more, please email me at kisuuna@gmail.com. Thank you!<p>
-            <div>
-                        <div>
 <p> Want to make an impact?  <span style="background-color:red; animation: blinker 0.5s linear infinite;"> <a href="https://www.paypal.com/donate/?hosted_button_id=6J54342YEUEZW">Click Here</a> </span>
 
 <style>
@@ -91,7 +54,7 @@ div {text-align: center;}
         <!--Section-->
                 
             <h2>External Links</h2>
-<P><a href="https://kisuun.wixsite.com/myblog/" title="blog" onMouseOver="this.style.color='red';" onMouseOut="this.style.color='blue';">More About our Projects</a><p>
+<P><a href="https://namlohimalaya.org/" title="blog" onMouseOver="this.style.color='red';" onMouseOut="this.style.color='blue';">Program Director</a><p>
 <P><a href="https://namloeuropa.org" title="partners" onMouseOver="this.style.color='red';" onMouseOut="this.style.color='blue';">Partners</a><p></p>
 </div>
             <!--Section-->
